--- a/styles/1_HomePage.css
+++ b/styles/1_HomePage.css
@@ -1,28 +1,13 @@
-/* Container to hold the image and text */
-.image-container {
-    position: relative;
-    width: 100%;
-    height: 100vh;
-}
-
-/* Image styling */
-#HeaderImage {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    position: absolute; /* The image is placed in the background */
-    z-index: -1;
-}
 
 /* Text styling */
-.image-container a {
+.Heading a {
     position: absolute;
     color: aqua;
     background-color: aqua;
     height: 100%;
     width: 25%;
     opacity: 0;
-    right: 0; /* Aligns the link to the right side */
+    right: 0;
 }
 
 /* General body settings */
@@ -32,4 +17,10 @@ body, html {
     height: 100%;
     width: 100%;
     overflow: hidden;
+    background-color: rgb(10, 10, 40);
+    color: whitesmoke;
+}
+
+.content h1 {
+    text-align: center;
 }
