--- a/styles/1_HomePage.css
+++ b/styles/1_HomePage.css
@@ -1,6 +1,4 @@
 
-
-
 /* General body settings */
 body, html {
     margin: 0;
@@ -12,15 +10,20 @@ body, html {
     color: whitesmoke;
 }
 
-header {
-    position: relative;
-    z-index: 1; /* Niedrigere Schicht */
+#main_container {
+    width: 100%; /* Ensure it covers the full width */
+    height: 100vh; /* Full viewport height */
+    position: relative; /* Makes the h1 position relative to this container */
+    text-align: center;
+    color: whitesmoke;
 }
 
-#heading {
-    text-align: center;
-    font-size: 10vh;
-    margin-top: 3vh;
+h1 {
+    position: absolute; /* Position the text absolutely within the container */
+    top: 3vh; /* 3% from the top */
+    left: 50%; /* Horizontally center the text */
+    transform: translateX(-50%); /* Adjust for the exact center */
+    font-size: 15vh; /* Optional: Adjust the font size */
 }
 
 
@@ -29,14 +32,13 @@ header {
     top: 0; /* Start oben */
     height: 100vh; /* Vollbild-Höhe */
     background-color: transparent; /* Unsichtbar */
+    width: 50%;
 }
 
 #forward {
     right: 0; /* Rechtsbündig */
-    width: 50%; /* Rechte Hälfte */
 }
 
 #backwards {
     left: 0; /* Linksbündig */
-    width: 50%; /* Linke Hälfte */
 }
