--- a/styles/2_outline.css
+++ b/styles/2_outline.css
@@ -4,8 +4,12 @@ html, body {
     height: 100vh;
     width: 100%;
     overflow: hidden;
-    background-color: rgb(10, 10, 40); 
+    background-color: rgb(10, 10, 40);
     color: whitesmoke;
+}
+
+html:hover, body:hover {
+    cursor: none;
 }
 
 #forward, #backwards {
@@ -17,18 +21,6 @@ html, body {
     position: absolute;
 }
 
-#forward :hover, #backwards :hover {
-    z-index: 10;
-    top: 0;
-    height: 100%;
-    background-color: transparent;
-    width: 50%;
-    position: absolute;
-
-    cursor: none;
-}
-
-
 #forward {
     right: 0;
 }
@@ -38,15 +30,31 @@ html, body {
 }
 
 
-#main_container {
+#list_container {
     height: 100vh;
     width: 100%;
+    text-align: center;
 }
-
 
 #heading_text {
     text-align: center;
     top: 3vh;
     font-size: 15vh;
+    margin: 5vh;
 }
 
+#list {
+    text-align: center;
+}
+
+#list ul {
+    list-style-position: inside; /* Verschiebt die Stichpunkte mit dem Text */
+    display: inline-block; /* Macht die Liste zentrierbar */
+    text-align: left;
+}
+
+#list li {
+    padding-bottom: 2vh;
+    font-size: 3vh;
+    font-weight: bold;
+}
