--- a/styles/8_conclusion-oppinion.css
+++ b/styles/8_conclusion-oppinion.css
@@ -36,4 +36,13 @@ html, body {
 
 #heading_text {
     text-align: center;
+    font-size: 10vh;
+    
+}
+
+img {
+    display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
 }
